жаль ничего не работает

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <NavigationInfo avatarSize="0.25 1.6 0.7" type="FLY" speed="2"></NavigationInfo>
       <Transform  rotation="1 0 0 0.7">
       <Transform rotation="0 0 1 0.2" translation="-3.5 4.5 5">
-      <Transform DEF="TransBox"  rotation="0 0 1 -1.57" scale=".2 .2 .2">
+      <Transform DEF="nloo"  rotation="0 0 1 -1.57" scale=".2 .2 .2">
         <Shape>
           <Appearance>
             <ImageTexture url="ufo.jpg">
@@ -39,7 +39,7 @@
       <Transform DEF="Tp3" scale="0.2 0.2 0.2" translation="0 0 .5" rotation="0 1 0 1.57">
         <Shape USE="tea"></Shape>
       </Transform>
-       <Transform DEF="TransBox" scale="1.5 0.5 1.5">
+       <Transform DEF="nloo" scale="1.5 0.5 1.5">
         <Shape>
           <Appearance>
             <ImageTexture url="nlo.jpg">
@@ -54,10 +54,10 @@
       </Transform>
       </Transform>
     </Transform>
-      <TimeSensor DEF="TimeBox"  cycleInterval="5" loop="true"></TimeSensor>
-      <PositionInterpolator DEF='PosIntBoxSCALE' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1' keyValue='2 1 2, 1 1 3, 1 1 2, 3 1 1, 3 1 2, 2 1 3, 2 1 1, 3 1 3, 1 1 3, 3 1 1, 2 1 2'></PositionInterpolator>
-      <ROUTE fromNode="TimeBox" fromField="fraction_changed" toNode="PosIntBoxSCALE" toField="set_fraction"></ROUTE>
-      <ROUTE fromNode="PosIntBoxSCALE" fromField="value_changed" toNode="TransBox" toField="set_scale"></ROUTE>
+      <TimeSensor DEF="TS_pi"  cycleInterval="5" loop="true"></TimeSensor>
+      <PositionInterpolator DEF='kolbasit' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1' keyValue='2 1 2, 1 1 3, 1 1 2, 3 1 1, 3 1 2, 2 1 3, 2 1 1, 3 1 3, 1 1 3, 3 1 1, 2 1 2'></PositionInterpolator>
+      <ROUTE fromNode="TS_pi" fromField="fraction_changed" toNode="kolbasit" toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="kolbasit" fromField="value_changed" toNode="nloo" toField="set_scale"></ROUTE>
     <Transform rotation="0 1 0 0.5">
     <Transform scale="0.00000006 0.00000004 0.00000003" rotation="0 0 1 0.5" translation="1 1 7">
     <Shape>
