--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Лабораторная работа №4. Твардовский ГВ. группа 4643</h1>
-    <X3D  width="1000" height="540" id="x3d" xmlns="https://www.x3dom.org/x3dom">
+    <X3D width='1900px' height='850px'>
       <Scene>
         <Background groundColor='0 0 0'></Background>
         <Transform scale = "1.2 1.2 1.2">
