--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
     <title>Лабораторная работа 4</title>
     <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
-    <script src="http://x3dom.org/release/x3dom-full.js"></script>
+    <script src="https://x3dom.org/release/x3dom-full.js"></script>
   </head>
   <body>
     <h1>Лабораторная работа №4. Твардовский ГВ. группа 4643</h1>
