Ну, а теперь как насчет галочки, ммм?

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </Shape>
       </Transform>
       <OrientationInterpolator DEF='OI1' key='0 0.5 1' keyValue='0 1 0 0 0 0 0.5 0 1 -0.6 0 0.2'></OrientationInterpolator>
-      <Transform DEF="two"translation="1.2 0 0">
+      <Transform DEF='two' translation="1.2 0 0">
         <Shape>
           <Appearance>
             <ImageTexture url="https://pp.userapi.com/c855420/v855420728/163f4/YCQo-KMP8ew.jpg"></ImageTexture>
