--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
         </Transform>
       </Transform>
       <TimeSensor DEF='Time1' cycleInterval='45' loop='true'></TimeSensor>
-      <OrientationInterpolator DEF='OrientInt1' key='0 0.6 1' keyValue='0 1 0 0 0 0 1 -3.14 0 0 1 -6.28'></OrientationInterpolator>
-      <Transform DEF ='Trans3' translation="0 0 1.7" rotation="0 0 1 0.785">
+      <OrientationInterpolator DEF='OrientIn' key='0 0.6 1' keyValue='0 1 0 0 0 0 1 -3.14 0 0 1 -6.28'></OrientationInterpolator>
+      <Transform DEF='Trans3' translation="0 0 1.7" rotation="0 0 1 0.785">
         <Transform DEF='Trans4'translation="0 1.2 0">
           <Shape>
             <Appearance>
@@ -195,8 +195,8 @@
   </Transform> <!--большой трансформ, не трожь-->
   <ROUTE fromNode='Time' fromField='fraction_changed' toNode='OrientInt' toField='set_fraction'></ROUTE>
   <ROUTE fromNode='OrientInt' fromField='value_changed' toNode='Trans' toField='set_rotation'></ROUTE>
-  <ROUTE fromNode='Time1' fromField='fraction_changed' toNode='OrientInt1' toField='set_fraction'></ROUTE>
-  <ROUTE fromNode='OrientInt1' fromField='value_changed' toNode='Trans3' toField='set_rotation'></ROUTE>
+  <ROUTE fromNode='Time1' fromField='fraction_changed' toNode='OrientIn' toField='set_fraction'></ROUTE>
+  <ROUTE fromNode='OrientIn' fromField='value_changed' toNode='Trans3' toField='set_rotation'></ROUTE>
   <!--Лампа-->
   <Transform translation="22 10 -30">
     <Shape>
