--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </Transform>
       </Transform>
       <TimeSensor DEF='Time1' cycleInterval='45' loop='true'></TimeSensor>
-      <OrientationInterpolator DEF='OrientIn' key='0 0.6 1' keyValue='0 1 0 0 0 0 1 -3.14 0 0 1 -6.28'></OrientationInterpolator>
+      <OrientationInterpolator DEF='OrI' key='0 0.6 1' keyValue='0 1 0 0 0 0 1 -3.14 0 0 1 -6.28'></OrientationInterpolator>
       <Transform DEF='Trans3' translation="0 0 1.7" rotation="0 0 1 0.785">
         <Transform DEF='Trans4'translation="0 1.2 0">
           <Shape>
@@ -195,8 +195,8 @@
   </Transform> <!--большой трансформ, не трожь-->
   <ROUTE fromNode='Time' fromField='fraction_changed' toNode='OrientInt' toField='set_fraction'></ROUTE>
   <ROUTE fromNode='OrientInt' fromField='value_changed' toNode='Trans' toField='set_rotation'></ROUTE>
-  <ROUTE fromNode='Time1' fromField='fraction_changed' toNode='OrientIn' toField='set_fraction'></ROUTE>
-  <ROUTE fromNode='OrientIn' fromField='value_changed' toNode='Trans3' toField='set_rotation'></ROUTE>
+  <ROUTE fromNode='Time1' fromField='fraction_changed' toNode='OrI' toField='set_fraction'></ROUTE>
+  <ROUTE fromNode='OrI' fromField='value_changed' toNode='Trans3' toField='set_rotation'></ROUTE>
   <!--Лампа-->
   <Transform translation="22 10 -30">
     <Shape>
@@ -214,9 +214,31 @@
         </Appearance>
         <Cylinder radius="2" height="9.6"></Cylinder>
       </Shape>
+      <PositionInterpolator DEF='PosIntSCALE' key='0 0.25 0.5 0.75 1' keyValue='1 1 1, 0.7 0.7 0.7, 0.5 1 0.5, 0.7 1 0.7, 1 1 1'></PositionInterpolator>
+      <Transform DEF='Shar' translation="0.5 1.5 0">
+      <Shape>
+        <Appearance>
+          <Material diffuseColor='0 1 1'></Material>
+        </Appearance>
+        <Sphere radius="1"></Sphere>
+      </Shape>
+    </Transform>
+    <PositionInterpolator DEF='PosIntSCALE1' key='0 0.25 0.5 0.75 1' keyValue='1 1 1, 0.5 0.5 0.5, 0.7 1 0.7, 0.5 1 0.5, 1 1 1'></PositionInterpolator>
+      <Transform DEF='Shar1' translation="0 -1.7 0.5">
+      <Shape>
+        <Appearance>
+          <Material diffuseColor='1 0 1'></Material>
+        </Appearance>
+        <Sphere radius="1.2"></Sphere>
+      </Shape>
+    </Transform>
     </Transform>
     <ROUTE fromNode="ColorTime" fromField="fraction_changed" toNode="ColInt" toField="set_fraction"></ROUTE>
     <ROUTE fromNode="ColInt" fromField="value_changed" toNode="Material" toField="set_diffuseColor"></ROUTE>
+    <ROUTE fromNode="ColorTime" fromField="fraction_changed" toNode="PosIntSCALE" toField="set_fraction"></ROUTE>
+    <ROUTE fromNode="PosIntSCALE" fromField="value_changed" toNode="Shar" toField="set_scale"></ROUTE>
+    <ROUTE fromNode="ColorTime" fromField="fraction_changed" toNode="PosIntSCALE1" toField="set_fraction"></ROUTE>
+    <ROUTE fromNode="PosIntSCALE1" fromField="value_changed" toNode="Shar1" toField="set_scale"></ROUTE>
     <Transform translation="0 -13 0">
       <Shape>
         <Appearance>
